--- a/templates/base.html
+++ b/templates/base.html
@@ -5,6 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Кривошеев М.С., Гавра В.А. лабораторная 1 {% block lab %}{% endblock %}</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='main.css') }}">
+    {% if request.cookies.get('color') or request.cookies.get('background-color') or request.cookies.get('font-size') %}
+        <style>
+            body {
+                background-color: {{request.cookies.get('background-color')}};
+                font-size: {{request.cookies.get('font-size')}};
+                color: {{request.cookies.get('color')}};
+            }
+        </style>
+    {% endif %}
+    {% block script %}{% endblock %}
 </head>
 <body>
    
